[gd_scene load_steps=6 format=3 uid="uid://5aa40j50rgw7"]

[ext_resource type="Script" uid="uid://dg5e30x15pshg" path="res://scenes/bola/bola.gd" id="1_5fnu0"]
[ext_resource type="Texture2D" uid="uid://d3ej2hw17gs2m" path="res://assets/sprites/bola.png" id="1_5lmq6"]
[ext_resource type="AudioStream" uid="uid://dag3oxun2xgr8" path="res://assets/sons/impacto-barreira.wav" id="3_ry8m0"]
[ext_resource type="AudioStream" uid="uid://bcfai10cafbf" path="res://assets/sons/impacto-jogador.wav" id="4_1vsct"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5fnu0"]

[node name="Bola" type="Area2D"]
script = ExtResource("1_5fnu0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_5lmq6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5fnu0")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SomBarreira" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ry8m0")

[node name="SomJogador" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1vsct")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
